# croad

./: .gitignore  README.md  distance.md
.github/workflows/: test.yml
data/: README.md  label_result.json  train_videos.yaml  video_label_result.json
proto/: label.proto
proto/shortcut/: compile.sh
roadart/: .gitignore  pubspec.yaml
roadart/lib/proto/: README.md
roadart/lib/src/: label_set.dart  labeler.dart  labeler.freezed.dart  labeler.g.dart  line_filter.dart  line_merger.dart  obstacle_filter.dart  patcher.dart  server_process.dart
roadart/test/: label_set_test.dart  line_filter_test.dart  patcher_test.dart  roadart_test.dart
roadart/test/data/: line_detection_2023121012_11001.pb  line_detection_comma10k_00008_e_a1fc603d9a8ddfc4.pb  line_detection_comma10k_00040_f_5352b3c0dcecc48d.pb  line_detection_comma10k_00164_e_a1fc603d9a8ddfc4.pb  line_detection_comma10k_00189_f_20f59690c1da9379.pb  (+3 more)
roadpy/: .gitignore  README.md  check_distribution.py  check_tfrecord.py  line_detector_server.py  make_tfrecord.py  obstacle.py  pyproject.toml  requirements.txt  requirements_mac.txt  requirements_ubuntu.txt  segment_server.py  tfrecord_setting.py  tfrecord_utils.py  to_onnx.py  to_tflite.py  train.py
roadpy/proto/: README.md
roadpy/server/: line_detector_server.py  obstacle.py  segment_server.py  server_utils.py
roadpy/shortcut/: compile_proto.sh  init_env.sh  save_requirements.sh  start_env  watch_png.sh
svg/: .gitignore  README.md  pubspec.yaml
weblab/: README.md  pubspec.yaml
weblab/lib/: main.dart  panel.dart
weblab/web/: index.html  manifest.json
