[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "roadpy"
version = "0.0.1"
dependencies = [
  "grpcio",
  "grpcio-tools",
  "jax[cuda12]; sys_platform == 'linux'",
  "jax; sys_platform == 'darwin'",
  "kaleido",
  "keras",
  "opencv-python",
  "pandas",
  "pillow",
  "plotly",
  "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
  "tensorflow",
  "torch==2.1.2",
  "torchvision",
  "transformers",
  "wget",
]
